# pyresource

./: .flake8  .gitignore  ;f  LICENSE.md  README.md  README.rst  advanced.md  dj.md  pyproject.toml  pytest.ini
django_resource/: boolean.py  conf.py  exceptions.py  executor.py  expression.py  features.py  field.py  query.py  resolver.py  resource.py  schema.py  schemas.py  server.py  space.py  store.py  test.py  translator.py  type_utils.py  types.py  typing.py  utils.py
django_resource.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_resource/django/: executor.py  expression.py  filter.py  filters.py  operators.py  resolver.py  store.py
pyresource/: __init__.py  conf.py  exceptions.py  executor.py  expression.py  features.py  field.py  query.py  record.py  resource.py  response.py  schemas.py  server.py  space.py  types.py
pyresource/django/: executor.py  meta.py  operators.py  prefetch.py  resolver.py  urls.py  utils.py
pyresource/meta/: executor.py
pyresource/utils/: __init__.py  types.py
tests/: models.py  server.py  settings.py  test_django_resource.py  urls.py  utils.py
tests/migrations/: 0001_initial.py
