[tool.poetry]
name = "django-resource"
version = "0.1.0"
description = ""
authors = ["aleontiev <alonetiev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2.4"
ttable = "^0.6.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipython = "^7.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
