[tool.poetry]
name = "pyresource"
version = "0.1.0"
description = "Resource is an SDK for building declarative, feature-rich REST APIs"
license = "MIT"
homepage = "https://github.com/aleontiev/pyresource"
authors = ["Anthony Leontiev <ant@devlit.co>"]

[tool.poetry.dependencies]
python = "^3.7"
ttable = "^0.6.3"
django-cte = {git = "https://github.com/aleontiev/django-cte", rev = "feature/get-manager"}

[tool.poetry.dev-dependencies]
pytest = "^5.4"
django = "^2.2.4"
ipython = "^7.10.2"
pytest-django = "^4.1.0"
psycopg2 = "^2.8.6"
django-cors-headers = "^3.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
